--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
            <li><a href="">About us</a></li>
           <li><a href="">Services
                <ul class="dropdown-menu">
-                    <li><a href="">link-1</a></li>
-                    <li><a href="">link-2</a></li>
-                    <li><a href="">link-3</a></li>
+                    <li><a href="visibility.html">Visibily</a></li>
+                    <li><a href="field.html">Field</a></li>
+                    <li><a href="animation.html">Animation</a></li>
                     <li><a href="">link-4</a></li>
                </ul>
           </a></li>
