--- a/field.html
+++ b/field.html
@@ -49,10 +49,15 @@
                <li><a href="">About us</a></li>
               <li><a href="">Services
                    <ul class="dropdown-menu">
-                        <li><a href="visibility.html">Visibily</a></li>
-                        <li><a href="">link-2</a></li>
-                        <li><a href="">link-3</a></li>
-                        <li><a href="">link-4</a></li>
+                    <ul class="dropdown-menu">
+                         <li><a href="visibility.html">Visibily</a></li>
+                         <li><a href="field.html">Field</a></li>
+                         <li><a href="animation.html">Animation</a></li>
+                         <li><a href="calender.html">Calender</a></li>
+                         <li><a href="responsive.html">Responsive</a></li>
+                        <li><a href="album.html">Album</a></li>
+
+                    </ul>
                    </ul>
               </a></li>
               <li><a class="contact" href="">Contact Us</a></li>
