--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                     <li><a href="visibility.html">Visibily</a></li>
                     <li><a href="field.html">Field</a></li>
                     <li><a href="animation.html">Animation</a></li>
-                    <li><a href="">link-4</a></li>
+                    <li><a href="calender.html">Calender</a></li>
+                    <li><a href="responsive.html">Responsive</a></li>
+                    <li><a href="album.html">Album</a></li>
+
                </ul>
           </a></li>
           <li><a class="contact" href="">Contact Us</a></li>
